--- a/前端页面/zysj/trainindex.html
+++ b/前端页面/zysj/trainindex.html
@@ -52,11 +52,11 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto main-nav ">
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a class="nav-link" href="index.html">首页</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="category.html">培训产品</a>
+							<li class="nav-item active">
+								<a class="nav-link" href="trainindex.html">培训产品</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="activityindex.html">活动策划</a>
@@ -65,15 +65,15 @@
 								<a class="nav-link" href="goodsindex.html">精美商品</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="layindex.html">法律服务</a>
+								<a class="nav-link" href="lawindex.html">法律服务</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="dashboard.html">在线客服</a>
+								<a class="nav-link" href="zxkf.html">在线客服</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-auto mt-10">
 							<li class="nav-item">
-								<a  href="index.html"><img src="images/my.png" height="60px"; width="50px"></a>
+								<a  href="my-info.html"><img src="images/my.png" height="60px"; width="50px"></a>
 							</li>
 						</ul>
 						<!-----
@@ -82,7 +82,7 @@
 								<a class="nav-link login-button" href="index.html">登陆</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link add-button" href="#">注册</a>
+								<a class="nav-link add-button" href="register.html">注册</a>
 							</li>
 						</ul>
 						---->
@@ -123,10 +123,10 @@
 					<div class="widget category-list">
 						<h4 class="widget-header">类别</h4>
 						<ul class="category-list">
-							<li><a href="category.html">培训产品 <span>93</span></a></li>
+							<li><a href="trainindex.html">培训产品 <span>93</span></a></li>
 							<li><a href="activityindex.html">活动策划 <span>233</span></a></li>
 							<li><a href="goodsindex.html">精美商品 <span>183</span></a></li>
-							<li><a href="layindex.html">法律服务 <span>343</span></a></li>
+							<li><a href="lawindex.html">法律服务 <span>343</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -141,17 +141,19 @@
 									<div class="thumb-content">
 										<!-- <div class="price">$200</div> -->
 										<a href="">
-											<img class="card-img-top img-fluid" src="images/products/fl1.jpg" alt="Card image cap">
+											<img class="card-img-top img-fluid" src="images/products/px1.png" alt="Card image cap">
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">法律咨询律师在线服务交通婚姻劳动公司知识产权</a></h4>
+										<h4 class="card-title"><a href="">运营管理招生全套系统计划考核资料模板</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
-												法律服务
+												培训
 											</li>
 										</ul>
-										<p class="card-text">服务于中小型及个人，为您提供更匹配的专业律师</p>
+										<p class="card-text">培训班类型: 7人以上班
+											学习平台: 淘宝线上学习
+											教学形式: 直录播混合</p>
 									</div>
 								</div>
 							</div>
@@ -165,17 +167,19 @@
 									<div class="thumb-content">
 										<!-- <div class="price">$200</div> -->
 										<a href="">
-											<img class="card-img-top img-fluid" src="images/products/fl2.jpg" alt="Card image cap">
+											<img class="card-img-top img-fluid" src="images/products/px2.jpg" alt="Card image cap">
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">律师法律咨询服务房产劳动仲裁离婚协议书起诉答辩状合同协议</a></h4>
+										<h4 class="card-title"><a href="">第六版PMP项目管理考试培训证明35学时PDU及视频在线课程</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
-												法律服务
+												培训
 											</li>
 										</ul>
-										<p class="card-text">我们的服务=您的私人律师</p>
+										<p class="card-text">品牌: 海强云课堂
+											开课形式: 随到随学
+											主讲老师: 卢海强</p>
 									</div>
 								</div>
 							</div>
@@ -212,7 +216,6 @@
 <!--============================
 =            Footer            =
 =============================-->
-
 <footer class="footer section section-sm">
 	<!-- Container Start -->
 	<div class="container">
