--- a/前端页面/zysj/activityindex.html
+++ b/前端页面/zysj/activityindex.html
@@ -52,28 +52,28 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto main-nav ">
-							<li class="nav-item active">
+							<li class="nav-item ">
 								<a class="nav-link" href="index.html">首页</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="category.html">培训产品</a>
+								<a class="nav-link" href="trainindex.html">培训产品</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a class="nav-link" href="activityindex.html">活动策划</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="goodsindex.html">精美商品</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="layindex.html">法律服务</a>
+								<a class="nav-link" href="lawindex.html">法律服务</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="dashboard.html">在线客服</a>
+								<a class="nav-link" href="zxkf.html">在线客服</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-auto mt-10">
 							<li class="nav-item">
-								<a  href="index.html"><img src="images/my.png" height="60px"; width="50px"></a>
+								<a  href="my-info.html"><img src="images/my.png" height="60px"; width="50px"></a>
 							</li>
 						</ul>
 						<!-----
@@ -82,7 +82,7 @@
 								<a class="nav-link login-button" href="index.html">登陆</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link add-button" href="#">注册</a>
+								<a class="nav-link add-button" href="register.html">注册</a>
 							</li>
 						</ul>
 						---->
@@ -123,10 +123,10 @@
 					<div class="widget category-list">
 						<h4 class="widget-header">类别</h4>
 						<ul class="category-list">
-							<li><a href="category.html">培训产品 <span>93</span></a></li>
+							<li><a href="trainindex.html">培训产品 <span>93</span></a></li>
 							<li><a href="activityindex.html">活动策划 <span>233</span></a></li>
 							<li><a href="goodsindex.html">精美商品 <span>183</span></a></li>
-							<li><a href="layindex.html">法律服务 <span>343</span></a></li>
+							<li><a href="lawindex.html">法律服务 <span>343</span></a></li>
 						</ul>
 					</div>
 				</div>
