--- a/前端页面/zysj/index.html
+++ b/前端页面/zysj/index.html
@@ -56,7 +56,7 @@
 								<a class="nav-link" href="index.html">首页</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="category.html">培训产品</a>
+								<a class="nav-link" href="trainindex.html">培训产品</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="activityindex.html">活动策划</a>
@@ -65,27 +65,27 @@
 								<a class="nav-link" href="goodsindex.html">精美商品</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="layindex.html">法律服务</a>
+								<a class="nav-link" href="lawindex.html">法律服务</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="dashboard.html">在线客服</a>
-							</li>
-						</ul>
-						<ul class="navbar-nav ml-auto mt-10">
-							<li class="nav-item">
-								<a  href="index.html"><img src="images/my.png" height="60px"; width="50px"></a>
+								<a class="nav-link" href="zxkf.html">在线客服</a>
 							</li>
 						</ul>
 						<!-----
 						<ul class="navbar-nav ml-auto mt-10">
 							<li class="nav-item">
-								<a class="nav-link login-button" href="index.html">登陆</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link add-button" href="#">注册</a>
+								<a  href="my-info.html"><img src="images/my.png" height="60px"; width="50px"></a>
 							</li>
 						</ul>
-						---->
+						-->
+						<ul class="navbar-nav ml-auto mt-10">
+							<li class="nav-item">
+								<a class="nav-link login-button" href="login.html">登陆</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link add-button" href="register.html">注册</a>
+							</li>
+						</ul>
 					</div>
 				</nav>
 			</div>
