--- a/前端页面/zysj/my-order.html
+++ b/前端页面/zysj/my-order.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Calssimax</title>
+  <title>HR商城</title>
   
   <!-- PLUGINS CSS STYLE -->
   <link href="plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
 								<a class="nav-link" href="index.html">首页</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="category.html">培训产品</a>
+								<a class="nav-link" href="trainindex.html">培训产品</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="activityindex.html">活动策划</a>
@@ -64,10 +64,10 @@
 								<a class="nav-link" href="goodsindex.html">精美商品</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="layindex.html">法律服务</a>
+								<a class="nav-link" href="lawindex.html">法律服务</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="dashboard.html">在线客服</a>
+								<a class="nav-link" href="zxkf.html">在线客服</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-auto mt-10">
@@ -81,7 +81,7 @@
 								<a class="nav-link login-button" href="index.html">登陆</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link add-button" href="#">注册</a>
+								<a class="nav-link add-button" href="register.html">注册</a>
 							</li>
 						</ul>
 						---->
@@ -105,7 +105,7 @@
 					<div class="widget user-dashboard-profile">
 						<!-- User Image -->
 						<div class="profile-thumb">
-							<img src="images/user/user-thumb.jpg" alt="" class="rounded-circle">
+							<img src="images/user/user1.jpg" alt="" class="rounded-circle">
 						</div>
 						<!-- User Name -->
 						<h5 class="text-center"><span id="username">昵称</span></h5>
@@ -175,88 +175,36 @@
 <!--============================
 =            Footer            =
 =============================-->
-
 <footer class="footer section section-sm">
-  <!-- Container Start -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3 col-md-7 offset-md-1 offset-lg-0">
-        <!-- About -->
-        <div class="block about">
-          <!-- footer logo -->
-          <img src="images/logo-footer.png" alt="">
-          <!-- description -->
-          <p class="alt-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-      </div>
-      <!-- Link list -->
-      <div class="col-lg-2 offset-lg-1 col-md-3">
-        <div class="block">
-          <h4>Site Pages</h4>
-          <ul>
-            <li><a href="#">Boston</a></li>
-            <li><a href="#">How It works</a></li>
-            <li><a href="#">Deals & Coupons</a></li>
-            <li><a href="#">Articls & Tips</a></li>
-            <li><a href="#">Terms of Services</a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- Link list -->
-      <div class="col-lg-2 col-md-3 offset-md-1 offset-lg-0">
-        <div class="block">
-          <h4>Admin Pages</h4>
-          <ul>
-            <li><a href="#">Boston</a></li>
-            <li><a href="#">How It works</a></li>
-            <li><a href="#">Deals & Coupons</a></li>
-            <li><a href="#">Articls & Tips</a></li>
-            <li><a href="#">Terms of Services</a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- Promotion -->
-      <div class="col-lg-4 col-md-7">
-        <!-- App promotion -->
-        <div class="block-2 app-promotion">
-          <a href="">
-            <!-- Icon -->
-            <img src="images/footer/phone-icon.png" alt="mobile-icon">
-          </a>
-          <p>Get the Dealsy Mobile App and Save more</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Container End -->
+	<!-- Container Start -->
+	<div class="container">
+		<div class="row offset-md-1 offset-lg-0 block about" >
+			<img src="images/logo.jpg" height="100" width="200">
+			<div class="footer-text">
+			</div>
+			<ul>
+				<li><a href="#">增值电信业务经营许可证：京B2-20080224</a></li>
+				<li><a href="#">值电信业务经营许可证（跨地区）： B2-20150210</a></li>
+				<li><a href="#">北京市网络食品销售第三方平台提供者备案：京网食A33010001</br>
+				</a></li>
+				<li><a href="#">信息网络传播视听许可证：1109364号</a></li>
+				<li><a href="#">出版物网络交易平台服务经营备案号：新出发京备字第002号</a></li>
+			</ul>
+		</div>
+	</div>
+	<!-- Container End -->
 </footer>
 <!-- Footer Bottom -->
 <footer class="footer-bottom">
-    <!-- Container Start -->
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-12">
-          <!-- Copyright -->
-          <div class="copyright">
-            <p>Copyright © 2016. All Rights Reserved. / More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
-          </div>
-        </div>
-        <div class="col-sm-6 col-12">
-          <!-- Social Icons -->
-          <ul class="social-media-icons text-right">
-              <li><a class="fa fa-facebook" href=""></a></li>
-              <li><a class="fa fa-twitter" href=""></a></li>
-              <li><a class="fa fa-pinterest-p" href=""></a></li>
-              <li><a class="fa fa-vimeo" href=""></a></li>
-            </ul>
-        </div>
-      </div>
-    </div>
-    <!-- Container End -->
-    <!-- To Top -->
-    <div class="top-to">
-      <a id="top" class="" href=""><i class="fa fa-angle-up"></i></a>
-    </div>
+	<!-- Container Start -->
+	<div class="container">
+		<p type="center">Copyright © 2019.7-现在 HR商城 版权所有</p>
+	</div>
+	<!-- Container End -->
+	<!-- To Top -->
+	<div class="top-to">
+		<a id="top" class="" href=""><i class="fa fa-angle-up"></i></a>
+	</div>
 </footer>
 
   <!-- JAVASCRIPTS -->
