--- a/前端页面/zysj/register.html
+++ b/前端页面/zysj/register.html
@@ -35,7 +35,6 @@
     <![endif]-->
 
 </head>
-
 <body class="body-wrapper">
 
 
@@ -52,7 +51,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto main-nav ">
-                            <li class="nav-item ">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="index.html">首页</a>
                             </li>
                             <li class="nav-item">
@@ -67,102 +66,76 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="lawindex.html">法律服务</a>
                             </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="zxkf.html">在线客服</a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav ml-auto mt-10">
                             <li class="nav-item">
-                                <a  href="my-info.html"><img src="images/my.png" height="60px"; width="50px"></a>
+                                <a class="nav-link" href="zxkf.html">在线客服</a>
                             </li>
                         </ul>
                         <!-----
                         <ul class="navbar-nav ml-auto mt-10">
                             <li class="nav-item">
-                                <a class="nav-link login-button" href="index.html">登陆</a>
+                                <a  href="my-info.html"><img src="images/my.png" height="60px"; width="50px"></a>
+                            </li>
+                        </ul>
+                        -->
+                        <ul class="navbar-nav ml-auto mt-10">
+                            <li class="nav-item">
+                                <a class="nav-link login-button" href="login.html">登陆</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link add-button" href="register.html">注册</a>
                             </li>
                         </ul>
-                        ---->
                     </div>
                 </nav>
             </div>
         </div>
     </div>
 </section>
-<section class="section-sm">
+
+<section class="hero-area bg-1 text-center overly">
+    <!-- Container Start -->
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="search-result bg-gray">
-                    <h2>你&nbsp&nbsp&nbsp想&nbsp&nbsp&nbsp要&nbsp&nbsp&nbsp的&nbsp&nbsp&nbsp样&nbsp&nbsp&nbsp子</h2>
-                    <p align="center">我&nbsp&nbsp&nbsp们&nbsp&nbsp&nbsp都&nbsp&nbsp&nbsp有</p>
+        <center>
+            <div class="row-row">
+                <div class="col-md-12">
+                    <!-- Header Contetnt -->
+                    <div class="content-block">
+                        <div class="advance-search">
+                            <form action="#">
+                                <div class="row-row">
+                                    <input type="text" class="input-search" id="userid" placeholder="账号" size="15" style="width:400px;height:50px;">
+                                </div>
+                                <br>
+                                <div class="row-row">
+                                    <!-- Store Search -->
+                                    <input type="text" class="input-search" id="username" placeholder="昵称" size="15" style="width:400px;height:50px;">
+                                </div>
+                                <br>
+                                <div class="row-row">
+                                    <!-- Store Search -->
+                                    <input type="password" class="input-search" id="password" placeholder="密码" size="15" style="width:400px;height:50px;">
+                                </div>
+                                <br>
+                                <div class="row-row">
+                                    <!-- Store Search -->
+                                    <input type="text" class="input-search" id="telephoto" placeholder="联系方式" size="15" style="width:400px;height:50px;">
+                                </div>
+                                <br>
+                                <center>
+                                    <button class="btn btn-main">注册</button>
+                                </center>
+                            </form>
+                        </div>
+                        <br>
+                        <br>
+                    </div>
+
+
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="container">
-                <p type="center">亲：您好！</p>
-                <p type="center">因网站功能限制，商品页无在线客服按钮。</p>
-                <p type="center">可以直接联系我们客服人员！</p>
-                <p type="center">15501233098</p>
-            </div>
-        </div>
+        </center>
     </div>
+    <!-- Container End -->
 </section>
-<!--============================
-=            Footer            =
-=============================-->
-
-<footer class="footer section section-sm">
-    <!-- Container Start -->
-    <div class="container">
-        <div class="row offset-md-1 offset-lg-0 block about" >
-            <img src="images/logo.jpg" height="100" width="200">
-            <div class="footer-text">
-            </div>
-            <ul>
-                <li><a href="#">增值电信业务经营许可证：京B2-20080224</a></li>
-                <li><a href="#">值电信业务经营许可证（跨地区）： B2-20150210</a></li>
-                <li><a href="#">北京市网络食品销售第三方平台提供者备案：京网食A33010001</br>
-                </a></li>
-                <li><a href="#">信息网络传播视听许可证：1109364号</a></li>
-                <li><a href="#">出版物网络交易平台服务经营备案号：新出发京备字第002号</a></li>
-            </ul>
-        </div>
-    </div>
-    <!-- Container End -->
-</footer>
-<!-- Footer Bottom -->
-<footer class="footer-bottom">
-    <!-- Container Start -->
-    <div class="container">
-        <p type="center">Copyright © 2019.7-现在 HR商城 版权所有</p>
-    </div>
-    <!-- Container End -->
-    <!-- To Top -->
-    <div class="top-to">
-        <a id="top" class="" href=""><i class="fa fa-angle-up"></i></a>
-    </div>
-</footer>
-
-<!-- JAVASCRIPTS -->
-<script src="plugins/jquery/jquery.min.js"></script>
-<script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-<script src="plugins/tether/js/tether.min.js"></script>
-<script src="plugins/raty/jquery.raty-fa.js"></script>
-<script src="plugins/bootstrap/dist/js/popper.min.js"></script>
-<script src="plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="plugins/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-<script src="plugins/slick-carousel/slick/slick.min.js"></script>
-<script src="plugins/jquery-nice-select/js/jquery.nice-select.min.js"></script>
-<script src="plugins/fancybox/jquery.fancybox.pack.js"></script>
-<script src="plugins/smoothscroll/SmoothScroll.min.js"></script>
-
-<script src="js/scripts.js"></script>
-
 </body>
-
 </html>
