链接详细产品页面

--- a/前端页面/zysj/activityindex.html
+++ b/前端页面/zysj/activityindex.html
@@ -145,22 +145,13 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">4A广告公司营销品牌活动策划案广告推广方案</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">4A广告公司营销品牌活动策划案广告推广方案</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												活动策划
 											</li>
 										</ul>
 										<p class="card-text">平面广告产品</p>
-										<div class="product-ratings">
-											<ul class="list-inline">
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item"><i class="fa fa-star"></i></li>
-											</ul>
-										</div>
 									</div>
 								</div>
 							</div>
@@ -178,22 +169,13 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="https://item.taobao.com/item.htm?id=14721554579&ali_refid=a3_430673_1006:1104307905:N:hBoDPapl0alc8lTefIFhcg%3D%3D:7c923b76356b22d0c941fe1a05006552&ali_trackid=1_7c923b76356b22d0c941fe1a05006552&spm=a2e15.8261149.07626516002.51">广告文案策划品牌故事公司简介 演讲稿PPT设计商业计划书原创软文</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">广告文案策划品牌故事公司简介 演讲稿PPT设计商业计划书原创软文</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												活动策划
 											</li>
 										</ul>
 										<p class="card-text">全方位服务，总有一款适合你</p>
-										<div class="product-ratings">
-											<ul class="list-inline">
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-												<li class="list-inline-item"><i class="fa fa-star"></i></li>
-											</ul>
-										</div>
 									</div>
 								</div>
 							</div>
