--- a/前端页面/zysj/goods-info.html
+++ b/前端页面/zysj/goods-info.html
@@ -52,26 +52,26 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto main-nav ">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">首页</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="category.html">培训产品</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="activityindex.html">活动策划</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="goodsindex.html">精美商品</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="layindex.html">法律服务</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="dashboard.html">在线客服</a>
-              </li>
-            </ul>
+              <ul class="navbar-nav ml-auto main-nav ">
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.html">首页</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="trainindex.html">培训产品</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="activityindex.html">活动策划</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="goodsindex.html">精美商品</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="lawindex.html">法律服务</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="zxkf.html">在线客服</a>
+                  </li>
+              </ul>
             <ul class="navbar-nav ml-auto mt-10">
               <li class="nav-item">
                 <a  href="index.html"><img src="images/my.png" height="60px"; width="50px"></a>
