--- a/前端页面/zysj/goodsindex.html
+++ b/前端页面/zysj/goodsindex.html
@@ -145,7 +145,7 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">英国Vanow高档保温杯男士女316不锈钢便携水杯子商务定制刻字茶杯</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">英国Vanow高档保温杯男士女316不锈钢便携水杯子商务定制刻字茶杯</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												精美商品
@@ -169,7 +169,7 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">宋明惠的小电脑</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">宋明惠的小电脑</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												精美商品
