--- a/前端页面/zysj/index.html
+++ b/前端页面/zysj/index.html
@@ -104,27 +104,8 @@
 			<div class="col-md-12">
 				<!-- Header Contetnt -->
 				<div class="content-block">
-					<h1>Buy & Sell Near You </h1>
-					<p>Join the millions who buy and sell from each other <br> everyday in local communities around the world</p>
-					<div class="short-popular-category-list text-center">
-						<h2>Popular Category</h2>
-						<!--------<ul class="list-inline">
-							<li class="list-inline-item">
-								<a href=""><i class="fa fa-bed"></i> Hotel</a></li>
-							<li class="list-inline-item">
-								<a href=""><i class="fa fa-grav"></i> Fitness</a>
-							</li>
-							<li class="list-inline-item">
-								<a href=""><i class="fa fa-car"></i> Cars</a>
-							</li>
-							<li class="list-inline-item">
-								<a href=""><i class="fa fa-cutlery"></i> Restaurants</a>
-							</li>
-							<li class="list-inline-item">
-								<a href=""><i class="fa fa-coffee"></i> Cafe</a>
-							</li>
-						</ul>--->
-					</div>
+					<h1>Buy & Sell For You </h1>
+					<p>Join the millions who buy and sell from each other <br> everyday around the world</p>
 					
 				</div>
 				<!-- Advance Search -->
@@ -183,7 +164,7 @@
 							</a>
 						</div>
 						<div class="card-body">
-							<h4 class="card-title"><a href="">律师法律咨询服务房产劳动仲裁离婚协议书起诉答辩状合同协议</a></h4>
+							<h4 class="card-title"><a href="goods-info.html">律师法律咨询服务房产劳动仲裁离婚协议书起诉答辩状合同协议</a></h4>
 							<ul class="list-inline product-meta">
 								<li class="list-inline-item">
 									法律服务
@@ -208,7 +189,7 @@
 							</a>
 						</div>
 						<div class="card-body">
-							<h4 class="card-title"><a href="">第六版PMP项目管理考试培训证明35学时PDU及视频在线课程</a></h4>
+							<h4 class="card-title"><a href="goods-info.html">第六版PMP项目管理考试培训证明35学时PDU及视频在线课程</a></h4>
 							<ul class="list-inline product-meta">
 								<li class="list-inline-item">
 									培训
@@ -234,22 +215,13 @@
 							</a>
 						</div>
 						<div class="card-body">
-							<h4 class="card-title"><a href="">4A广告公司营销品牌活动策划案广告推广方案</a></h4>
+							<h4 class="card-title"><a href="goods-info.html">4A广告公司营销品牌活动策划案广告推广方案</a></h4>
 							<ul class="list-inline product-meta">
 								<li class="list-inline-item">
 									活动策划
 								</li>
 							</ul>
 							<p class="card-text">平面广告产品</p>
-							<div class="product-ratings">
-								<ul class="list-inline">
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item"><i class="fa fa-star"></i></li>
-								</ul>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -267,22 +239,13 @@
 							</a>
 						</div>
 						<div class="card-body">
-							<h4 class="card-title"><a href="">商品名称</a></h4>
+							<h4 class="card-title"><a href="goods-info.html">商品名称</a></h4>
 							<ul class="list-inline product-meta">
 								<li class="list-inline-item">
 									商品类型
 								</li>
 							</ul>
 							<p class="card-text">商品简短介绍</p>
-							<div class="product-ratings">
-								<ul class="list-inline">
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item selected"><i class="fa fa-star"></i></li>
-									<li class="list-inline-item"><i class="fa fa-star"></i></li>
-								</ul>
-							</div>
 						</div>
 					</div>
 				</div>
