--- a/前端页面/zysj/trainindex.html
+++ b/前端页面/zysj/trainindex.html
@@ -145,7 +145,7 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">运营管理招生全套系统计划考核资料模板</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">运营管理招生全套系统计划考核资料模板</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												培训
@@ -171,7 +171,7 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">第六版PMP项目管理考试培训证明35学时PDU及视频在线课程</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">第六版PMP项目管理考试培训证明35学时PDU及视频在线课程</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												培训
