--- a/前端页面/zysj/lawindex.html
+++ b/前端页面/zysj/lawindex.html
@@ -145,7 +145,7 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">法律咨询律师在线服务交通婚姻劳动公司知识产权</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">法律咨询律师在线服务交通婚姻劳动公司知识产权</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												法律服务
@@ -169,7 +169,7 @@
 										</a>
 									</div>
 									<div class="card-body">
-										<h4 class="card-title"><a href="">律师法律咨询服务房产劳动仲裁离婚协议书起诉答辩状合同协议</a></h4>
+										<h4 class="card-title"><a href="goods-info.html">律师法律咨询服务房产劳动仲裁离婚协议书起诉答辩状合同协议</a></h4>
 										<ul class="list-inline product-meta">
 											<li class="list-inline-item">
 												法律服务
