--- a/前端页面/zysj/comment.html
+++ b/前端页面/zysj/comment.html
@@ -101,7 +101,7 @@
 <section class="blog single-blog section">
   <div class="container">
     <div class="row">
-      <div class="col-md-10 offset-md-1 col-lg-9 offset-lg-0"  style="margin:0 auto;">
+      <div  style="margin:0 auto;">
           <div class="block comment">
             <h4>评论</h4>
             <form action="#">
