--- a/前端页面/zysj/login.html
+++ b/前端页面/zysj/login.html
@@ -104,13 +104,13 @@
                             <form action="#">
 
                                     <div class="row-row">
-                                        <input type="text" class="input-search" id="userid" placeholder="账号" size="15" style="width:400px;height:50px;">
+                                        <input type="text" class="form-control input-search" id="userid" placeholder="账号" size="15" style="width:400px;height:50px;">
                                     </div>
                                     <br>
                                     <br>
                                     <div class="row-row">
                                         <!-- Store Search -->
-                                        <input type="password" class="input-search" id="password" placeholder="密码" size="15" style="width:400px;height:50px;">
+                                        <input type="password" class="form-control input-search" id="password" placeholder="密码" size="15" style="width:400px;height:50px;">
                                     </div>
                                     <br>
                                     <center>
