--- a/前端页面/zysj/register.html
+++ b/前端页面/zysj/register.html
@@ -102,23 +102,30 @@
                     <div class="content-block">
                         <div class="advance-search">
                             <form action="#">
+                                <div class="row-row" class="input-search" size="15" style="height:50px;">
+                                    <select>
+                                        <option value ="供应商">供应商</option>
+                                        <option value ="普通用户">普通用户</option>
+                                    </select>
+                                </div>
+                                <br>
                                 <div class="row-row">
-                                    <input type="text" class="input-search" id="userid" placeholder="账号" size="15" style="width:400px;height:50px;">
+                                    <input type="text" class="form-control input-search" id="userid" placeholder="账号" size="15" style="width:400px;height:50px;">
                                 </div>
                                 <br>
                                 <div class="row-row">
                                     <!-- Store Search -->
-                                    <input type="text" class="input-search" id="username" placeholder="昵称" size="15" style="width:400px;height:50px;">
+                                    <input type="text" class="form-control input-search" id="username" placeholder="昵称" size="15" style="width:400px;height:50px;">
                                 </div>
                                 <br>
                                 <div class="row-row">
                                     <!-- Store Search -->
-                                    <input type="password" class="input-search" id="password" placeholder="密码" size="15" style="width:400px;height:50px;">
+                                    <input type="password" class="form-control input-search" id="password" placeholder="密码" size="15" style="width:400px;height:50px;">
                                 </div>
                                 <br>
                                 <div class="row-row">
                                     <!-- Store Search -->
-                                    <input type="text" class="input-search" id="telephoto" placeholder="联系方式" size="15" style="width:400px;height:50px;">
+                                    <input type="text" class="form-control input-search" id="telephoto" placeholder="联系方式" size="15" style="width:400px;height:50px;">
                                 </div>
                                 <br>
                                 <center>
